# LocalFlow

./: LICENSE  PLAN.md  README.md  install.sh  pyproject.toml  start.sh
docs/superpowers/specs/: 2026-07-08-localflow-design.md
localflow/: app.py  cli.py  config.py  context.py  doctor.py  engine.py  formatter.py  history.py  hotkey.py  inserter.py  login.py  recorder.py  sounds.py  ui.py
scripts/: build-app.sh  launcher.c  make-icon.py
tests/: test_formatter.py  test_history.py  test_streaming.py  test_tap_tracker.py
