[project]
name = "localflow"
version = "0.1.0"
description = "Local Wispr Flow clone for macOS — hold fn, speak, release; formatted text lands in the active app. 100% on-device."
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
]

[project.scripts]
localflow = "localflow.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["localflow"]
